odds and ends: fixed commented out test, blank test, adjusted header on mobile view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,6 +154,10 @@ div.trip-avatar img {
         align-items: center;
     }
 
+    header h1 {
+        font-size: 28px;
+    }
+
     header div.spacer {
         width: 100px;
     }
